--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-[
-	{"ip":"150.138.83.129", "server": "Badfupo"},
-	{"ip":"103.135.102.98", "server": "测试"}
-]
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		[
+			{"ip":"150.138.83.129", "server": "Badfupo"},
+			{"ip":"103.135.102.98", "server": "测试"}
+		]
+	</head>
+	<body>
+
+	</body>
+</html>
