--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		[
-			{"ip":"150.138.83.129", "server": "Badfupo"},
-			{"ip":"103.135.102.98", "server": "测试"}
-		]
 	</head>
 	<body>
+		<script src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
+		<script type="text/javascript">
+			document.write(returnCitySN["cip"]+','+returnCitySN["cname"])
+		</script>
 
 	</body>
 </html>
