--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 		<meta charset="UTF-8">
 	</head>
 	<body>
-		<script src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
+		<script type="text/javascript" src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
 		<script type="text/javascript">
-			document.write(returnCitySN["cip"]+','+returnCitySN["cname"])
+			document.write(returnCitySN["cip"])
 		</script>
-
 	</body>
 </html>
