--- a/index.html
+++ b/index.html
@@ -2,22 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
 	</head>
 	<body>
-		<div id="divCustomers"></div>
-		<script>
-			$.getJSON("https://api.ipify.org/?format=json", function(data) {
-				
-				var html = '<ul>';
-				for(var i = 0; i < data.length; i++)
-				{
-					html += '<li>' + data[i] + '</li>';
-				}
-				html += '</ul>';
-				
-				$('#divCustomers').html(html); 
-			});
-		</script>
+		<div id="json">
+			{"Permission": true}
+		</div>
 	</body>
 </html>
