--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	</head>
 	<body>
 		<div id="json">
-			{"Permission": true}
+			<pre class="json">{"Permission": true}</pre>
+			
 		</div>
 	</body>
 </html>
